<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FamilySync APP</string>
    <string name="btRegresar">Regresar</string>
    <string name="btResidentes">RESIDENTES</string>
    <string name="btProfesionales">PROFESIONALES</string>
    <string name="tvemail">Email</string>
    <string name="tvContraseña">Contraseña</string>
    <string name="btLogin">Entrar</string>
    <string name="btRegistrarse">Registrarse</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvDireccion">Direccion</string>
    <string name="tvNumRegistro">Num Registro</string>
    <string name="tvTelefono">Teléfono</string>
    <string name="tvEmail">Email</string>
    <string name="cbWifi">Wifi</string>
    <string name="btSelectPhoto">Seleccionar Foto</string>
    <string name="btregister">Registrar</string>
    <string name="btcancel">Cancelar</string>
    <string name="tvApellidos">Apellidos</string>
    <string name="tvDni">DNI</string>
    <string name="tvCategoria">Categoría</string>
    <string name="tvSexo">Sexo</string>
    <string name="tvWifi">Wifi</string>
    <string name="btModificar">Modificar</string>
    <string name="btDelete">Eliminar</string>
    <string name="tieneWifi">Tiene Wifi</string>
    <string name="noTieneWifi">No tiene Wifi</string>
    <string name="estasSeguroDeBorrarElCentro">Estas seguro de Borrar el centro</string>
    <string name="borrarCentro">Borrar Centro</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="deseasModificarElCentro">¿Deseas modificar el centro?</string>
    <string name="confirmarModificación">Confirmar Modificación</string>
    <string name="estasSeguroDeBorrarElProfesional">Estas seguro de Borrar el profesional</string>
    <string name="ConfirmarBorrado">Confirmar Borrado</string>
    <string name="deseasModificarElProfesional">¿Deseas modificar el Profesional?</string>
    <string name="estasSeguroDeBorrarElResidente">Estas seguro de Borrar el residente</string>
    <string name="deseasModificarElResidente">¿Deseas modificar el Residente?</string>
    <string name="fotoSeleccionada">Foto Seleccionada</string>
    <string name="fotoCapturada">Foto Capturada</string>
    <string name="centroModificado">Centro Modificado</string>
    <string name="residenteModificado">Residente Modificado</string>
    <string name="profesionalModificado">Profesional Modificado</string>
    <string name="centroRegistado">Centro Registrado</string>
    <string name="residenteRegistado">Residente Registrado</string>
    <string name="profesionalRegistado">Profesional Registrado</string>
    <string name="btCentros">CENTROS</string>
    <string name="IndicaLaPosicionDelCentroEnElMapa">Indica la posición del Centro en el mapa</string>
    <string name="titMaps">Mapa Centros</string>
    <string name="titCentros">Centros</string>
    <string name="titProfesinales">Profesionales</string>
    <string name="titResidentes">Residentes</string>
    <string name="centroNombreVacio">El centro debe tener un nombre</string>
    <string name="profesionalNombreVacio">El nombre del profesional debe estar relleno</string>
    <string name="btComunidad" >COMUNIDAD GESRES</string>
</resources>