<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewCentroView">


    <LinearLayout
        android:id="@+id/lyViewCentro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDireccion"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvDireccion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumRegistro"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvNumRegistro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibTelefono"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="dialPhoneNumber"
                android:src="@android:drawable/stat_sys_phone_call_forward" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTelefono"
                style="?attr/textInputFilledStyle"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:enabled="false"
                android:hint="@string/tvTelefono"
                app:endIconDrawable="@android:drawable/stat_sys_phone_call_forward"
                app:startIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:longClickable="true"
                    android:onClick="dialPhoneNumber" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWifi"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/cbWifi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

       <!-- <TextView
            android:id="@+id/tvWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/cbWifi" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCentro"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_weight="1"
                android:enabled="false" />

            <!--<com.mapbox.maps.MapView
                android:id="@+id/mvCentro"
                android:layout_width="200dp"
                android:layout_height="258dp"
                app:cameraTargetLat="42.659548"
                app:cameraTargetLng="-8.110613"
                app:cameraZoom="10.0" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<Button
                    android:id="@+id/btMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btModificar" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btMod"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D5ECE7"
                android:text="@string/btModificar"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                android:visible="false"
                app:iconGravity="textStart" />

            <!--<Button
                    android:id="@+id/btDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btDelete" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btDelete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D5ECE7"
                android:text="@string/btDelete"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                android:visible="false"
                app:iconGravity="textStart" />

            <!--                app:icon="@drawable/ic_modify"-->
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>