<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"

            app:navigationIcon="?attr/actionModeCloseDrawable"
            app:title="@string/titCentros"
            app:titleCentered="false"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:titleTextColor="@color/design_default_color_on_primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tvNombre" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNombre"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvNombre"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tvDireccion" />

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />-->


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDireccion"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvDireccion"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tvNumRegistro" />

            <EditText
                android:id="@+id/etNumRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />
        </LinearLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumRegistro"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvNumRegistro"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tvTelefono" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTelefono"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvTelefono"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvEmail"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--<CheckBox
            android:id="@+id/cbWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbWifi" />-->

        <!--<Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="selectPhoto"
            android:text="@string/btSelectPhoto" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectPhoto"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#D5ECE7"
                android:onClick="selectPhoto"
                android:text="@string/btSelectPhoto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1"
                android:text="@string/cbWifi"
                app:boxBackgroundColor="#1DE9B6"
                app:boxStrokeColor="#76FF03"
                app:boxStrokeWidth="2dp"
                app:strokeColor="?attr/colorSecondary"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCentroReg"
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:layout_weight="1" />

            <com.mapbox.maps.MapView
                android:id="@+id/mvCentro"
                android:layout_width="200dp"
                android:layout_height="220dp"/>
                <!--app:cameraTargetLat="42.659548"
                app:cameraTargetLng="-8.110613"
                app:cameraZoom="10.0"-->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<Button
                android:id="@+id/registerCentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="registerCentro"
                android:text="@string/btregister" />-->

            <Button
                android:id="@+id/registerCentro"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#D5ECE7"
                android:onClick="registerCentro"
                android:text="@string/btregister"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--<Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancel"
                android:text="@string/btcancel" />-->

            <!--<Button
                android:id="@+id/cancel"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#D5ECE7"
                android:onClick="cancel"
                android:text="@string/btcancel"
                android:textSize="16sp"
                android:textStyle="bold" />-->

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
