<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewResidenteActivity">

    <LinearLayout
        android:id="@+id/lyViewResidente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

       <!-- <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tvNombre" />

        <TextView
            android:id="@+id/tvApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tvApellidos" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellidos"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvApellidos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDni"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvDni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--<TextView
            android:id="@+id/tvDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tvDni" />-->

        <!--<TextView
            android:id="@+id/tvResidenteFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dp"
            android:text="Fecha Nac." />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSexo"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/tvSexo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--<TextView
            android:id="@+id/tvSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tvSexo" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivResidente"
                android:layout_width="56dp"
                android:layout_height="258dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<Button
                    android:id="@+id/btMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btModificar" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btMod"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D5ECE7"
                android:text="@string/btModificar"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:iconGravity="textStart" />

            <!--<Button
                    android:id="@+id/btDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btDelete" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btDelete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D5ECE7"
                android:text="@string/btDelete"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:iconGravity="textStart" />

            <!--                app:icon="@drawable/ic_modify"-->
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btMod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btModificar" />

                <Button
                    android:id="@+id/btDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btDelete" />
            </LinearLayout>

        </LinearLayout>-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>